--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
-plugins {
-    id 'java'
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+  dependencies {
+    classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.1.RELEASE")
+  }
 }
+
+
+plugins {
+  id 'java'
+}
+
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'com.xubin'
 version '1.0-SNAPSHOT'
@@ -8,9 +21,15 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+}
+
+test {
+  useJUnitPlatform()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
+  compile("org.springframework.boot:spring-boot-starter-web")
+  testCompile('org.springframework.boot:spring-boot-starter-test')
 }
