--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,7 @@ test {
 dependencies {
   testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
   compile("org.springframework.boot:spring-boot-starter-web")
+  compile("org.springframework.boot:spring-boot-starter-data-jpa")
   testCompile('org.springframework.boot:spring-boot-starter-test')
+  annotationProcessor 'org.projectlombok:lombok'
 }
