--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,7 @@ dependencies {
   compile("org.springframework.boot:spring-boot-starter-data-jpa")
   testCompile('org.springframework.boot:spring-boot-starter-test')
   annotationProcessor 'org.projectlombok:lombok'
+  compileOnly 'org.projectlombok:lombok'
+  runtimeOnly 'org.postgresql:postgresql'
+  testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
