--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ dependencies {
   runtimeOnly 'org.postgresql:postgresql'
   testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
   compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+
+  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
+  compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
 }
